deploy/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zinde-xyz
  namespace: zinde
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zinde-xyz
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zinde-xyz
        tier: api
    spec:
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: zinde-xyz
          command:
            - npm
            - run
            - start
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: '100Mi'
              cpu: '100m'
            limits:
              memory: '800Mi'
              cpu: '200m'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
