deploy/dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zinde-xyz
  namespace: crossbell
spec:
  type: ClusterIP
  selector:
    app: zinde-xyz
    tier: api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
