deploy/dev/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zinde-xyz
  namespace: crossbell
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`crossbell.kindjeff.com`)
    services:
    - name: zinde-xyz
      port: 3000
